--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prismicio/client": "^7.2.0",
     "@prismicio/next": "^1.3.4",
     "@prismicio/react": "^2.7.2",
+    "@studio-freight/lenis": "^1.0.23",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
