--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gsap": "^3.12.2",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swiper": "^10.3.0"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.15",
