Token edit prismic test

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-PRISMIC_API_TOKEN="MC5aUXBmelJBQUFDWUFmWHox.Q--_vTvvv70177-977-977-977-9EGjvv73vv70L77-9U--_ve-_ve-_vWXvv73vv70Pau-_ve-_ve-_ve-_vXPvv73vv70f"
+# PRISMIC_API_TOKEN="MC5aUkJjVnhBQUFDSUFLdnox.OO-_vXV9LwdY77-977-977-9BEnvv73vv73vv71M77-977-977-977-9AO-_vQ5177-9DXbvv73vv70LNO-_vQ"
