--- a/slicemachine.config.json
+++ b/slicemachine.config.json
@@ -1,4 +1,5 @@
 {
+  "apiEndPoint": "https://noster.cdn.prismic.io/api/v2",
   "repositoryName": "noster",
   "adapter": "@slicemachine/adapter-next",
   "libraries": ["./slices"],
