--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@prismicio/next": "^1.3.4",
     "@prismicio/react": "^2.7.2",
     "@studio-freight/lenis": "^1.0.23",
+    "dotenv": "^16.4.5",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "formidable": "^3.5.1",
+    "formidable-serverless": "^1.1.1",
+    "googleapis": "^140.0.1",
     "gsap": "^3.12.2",
     "next": "13.4.19",
     "react": "18.2.0",
@@ -23,6 +27,7 @@
     "react-scroll-parallax": "^3.4.2",
     "rellax": "^1.12.1",
     "simple-parallax-js": "^5.6.2",
+    "stream": "^0.0.3",
     "swiper": "^10.3.0"
   },
   "devDependencies": {
